Replace Jsoup, work in progress #4, DIDL container