@@ -8,23 +8,20 @@ import java.util.Locale;
 import nl.kbresearch.europeana_newspapers.NerAnnotator.alto.AltoProcessor;
 import nl.kbresearch.europeana_newspapers.NerAnnotator.output.ResultHandlerFactory;
 
-import org.jsoup.Jsoup;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
-import org.jsoup.parser.Parser;
-import org.jsoup.select.Elements;
-
-//import org.w3c.dom.Document;
-//import org.w3c.dom.Element;
-//import org.w3c.dom.NodeList;
-//import javax.xml.parsers.DocumentBuilder;
+import org.w3c.dom.Document;
+import org.w3c.dom.Node;
+import org.w3c.dom.Element;
+import org.w3c.dom.NodeList;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.DocumentBuilder;
 
 
 /**
  * Processor for MPEG21-DIDL files. This parser is tested with the KB DDD
  * Collection.
  * 
- * @author rene
+ * @author Rene
+ * @author Willem Jan Faber
  * 
  */
 public class DIDLProcessor implements ContainerProcessor {
@@ -35,68 +32,46 @@ public class DIDLProcessor implements ContainerProcessor {
 	public static DIDLProcessor INSTANCE = new DIDLProcessor();
 
 	@Override
-	public boolean processFile(ContainerContext context, String urlStr,
-			Locale lang) throws IOException {
+	public boolean processFile(ContainerContext context, String urlStr, Locale lang) throws IOException {
 		URL url = null;
 		File file = new File(urlStr);
-		if (file.exists()) {
-			url = file.toURI().toURL();
-		} else {
 
-			url = new URL(urlStr);
-			System.out.println("File not found, trying to get from URL: "
-					+ url.toExternalForm());
+		if (file.exists()) {
+                    url = file.toURI().toURL();
+		} else {
+                    url = new URL(urlStr);
+                    System.out.println("File not found, trying to get from URL: " + url.toExternalForm());
 		}
 
 		Document doc = null;
-
-                
 		System.out.println("Processing DIDL-File " + urlStr);
-                // DocumentBuilder db = dbf.newDocumentBuilder();
-                // doc = db.parse(file);
-		doc = Jsoup.parse(url.openStream(), "UTF-8", "", Parser.xmlParser());
-
-		Elements elementsByTag = doc.getElementsByTag("didl:resource");
-                //NodeList elementsByTag = doc.getElementsByTagName("didl:Resource");
-
-
+                DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
 		int count = 0;
 
-                //for (int i = 0; i<elementsByTag.getLength(); i++) {
-                //Node tokens = elementsByTag.item(i);
-                //if (tokens.getNodeType() == Node.ELEMENT_NODE) {
-                //Element eElement = (Element) tokens;
-                //if (eElement.getAttribute("mimeType").equals("text/xml") {
-                //URL url2 = new URL(eElement.getAttribute("ref");
-                //String altoFilename = eElement.getAttribute("dcx:filename");
-       	        //if (altoFilename == null || altoFilename.isEmpty()) {
-	        //altoFilename = "alto-" + (count++) + ".xml";
-		//			}
-                //AltoProcessor.handlePotentialAltoFile(url2, eElement
-                //.getAttribute("mimetype"), lang, ResultHandlerFactory
-	        //.createResultHandlers(context, altoFilename));
-                //}
-                //}
-                //}
+                try {
+                    DocumentBuilder db = dbf.newDocumentBuilder();
+                    doc = db.parse(file);
+                    NodeList elementsByTag = doc.getElementsByTagName("didl:Resource");
 
-		for (Element e : elementsByTag) {
-			if (e.attr("mimetype").equals("text/xml")) {
-				if (e.attr("ref").endsWith(":alto")) {
-					URL url2 = new URL(e.attr("ref"));
-					String altoFilename = e.attr("dcx:filename");
-					if (altoFilename == null || altoFilename.isEmpty()) {
-						altoFilename = "alto-" + (count++) + ".xml";
-					}
-
-					AltoProcessor.handlePotentialAltoFile(url2, e
-							.attr("mimetype"), lang, ResultHandlerFactory
-							.createResultHandlers(context, altoFilename));
-				}
-			}
-		}
-
+                    for (int i = 0; i<elementsByTag.getLength(); i++) {
+                        Node tokens = elementsByTag.item(i);
+                        if (tokens.getNodeType() == Node.ELEMENT_NODE) {
+                            Element eElement = (Element) tokens;
+                            if (eElement.getAttribute("mimeType").equals("text/xml")) {
+                                URL url2 = new URL(eElement.getAttribute("ref"));
+                                String altoFilename = eElement.getAttribute("dcx:filename");
+                                if (altoFilename == null || altoFilename.isEmpty()) {
+                                    altoFilename = "alto-" + (count++) + ".xml";
+                                }
+                                AltoProcessor.handlePotentialAltoFile(url2, eElement .getAttribute("mimetype"), lang, ResultHandlerFactory.createResultHandlers(context, altoFilename));
+                            }
+                        }
+                    }
+                } catch (javax.xml.parsers.ParserConfigurationException e) { 
+                    e.printStackTrace(); 
+                } catch (org.xml.sax.SAXException e) { 
+                    e.printStackTrace(); 
+                }
 		return (count > 0);
-
 	}
-
 }
